--- a/src/scss/sections/main/_contacts.scss
+++ b/src/scss/sections/main/_contacts.scss
@@ -1,102 +1,99 @@
 .contacts {
-  &__container {
-  }
-  &__title-text {
-    color: var(--palette-tertiary-text);
-  }
+    &__container {}
+    &__title-text {
+        color: var(--palette-tertiary-text);
+    }
 }
 
 .contacts-body {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  @include media-breakpoint-up(xl) {
-    margin-top: 75px;
-  }
-  @include media-breakpoint-between(lg, xl) {
-    margin-top: 60px;
-  }
-  @include media-breakpoint-down(lg) {
-    flex-direction: column;
-    margin-top: 40px;
-  }
-  &__text {
-    max-width: 300px;
-  }
-  &__text-title {
-    font-family: var(--typography-fontFamily);
-    font-weight: var(--typography-fontWeightMedium);
-    color: var(--palette-secondary-tex);
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
     @include media-breakpoint-up(xl) {
-      font-size: 28px;
+        margin-top: 75px;
     }
-    @include media-breakpoint-down(xl) {
-      font-size: 24px;
+    @include media-breakpoint-between(lg, xl) {
+        margin-top: 60px;
     }
     @include media-breakpoint-down(lg) {
-      font-size: 20px;
+        flex-direction: column;
+        margin-top: 40px;
     }
-    @include media-breakpoint-down(md) {
-      font-size: 16px;
+    &__text {
+        max-width: 300px;
     }
-  }
-  &__map {
-    @include media-breakpoint-up(xxl) {
-      width: 960px;
-      height: 620px;
+    &__text-title {
+        font-weight: var(--typography-fontWeightMedium);
+        color: var(--palette-secondary-tex);
+        @include media-breakpoint-up(xl) {
+            font-size: 28px;
+        }
+        @include media-breakpoint-down(xl) {
+            font-size: 24px;
+        }
+        @include media-breakpoint-down(lg) {
+            font-size: 20px;
+        }
+        @include media-breakpoint-down(md) {
+            font-size: 16px;
+        }
     }
-    @include media-breakpoint-between(lg, xxl) {
-      width: 960px;
-      height: 454px;
+    &__map {
+        @include media-breakpoint-up(xxl) {
+            width: 960px;
+            height: 620px;
+        }
+        @include media-breakpoint-between(lg, xxl) {
+            width: 960px;
+            height: 454px;
+        }
+        @include media-breakpoint-between(md, lg) {
+            width: 100%;
+            height: 480px;
+        }
+        @include media-breakpoint-down(md) {
+            width: 100%;
+            height: 278px;
+        }
     }
-    @include media-breakpoint-between(md, lg) {
-      width: 100%;
-      height: 480px;
-    }
-    @include media-breakpoint-down(md) {
-      width: 100%;
-      height: 278px;
-    }
-  }
 }
 
 .contacts-list {
-  width: 100%;
-  @include media-breakpoint-up(xl) {
-    margin-top: 50px;
-  }
-  @include media-breakpoint-between(lg, xl) {
-    margin-top: 35px;
-  }
-  @include media-breakpoint-down(lg) {
-    margin-top: 40px;
-  }
-  &__item {
-    display: flex;
-  }
-  &__item-link {
-    display: flex;
-    font-family: var(--typography-fontFamily);
-    font-weight: var(--typography-fontWeightLight);
-    color: var(--palette-secondary-tex);
-    white-space: nowrap;
+    width: 100%;
     @include media-breakpoint-up(xl) {
-      font-size: 22px;
-      padding-top: 12.5px;
-      padding-bottom: 12.5px;
+        margin-top: 50px;
     }
     @include media-breakpoint-between(lg, xl) {
-      font-size: 20px;
+        margin-top: 35px;
     }
-    @include media-breakpoint-down(xl) {
-      padding-top: 7.5px;
-      padding-bottom: 7.5px;
+    @include media-breakpoint-down(lg) {
+        margin-top: 40px;
     }
-    @include media-breakpoint-between(md, lg) {
-      font-size: 18px;
+    &__item {
+        display: flex;
     }
-    @include media-breakpoint-down(md) {
-      font-size: 16px;
+    &__item-link {
+        display: flex;
+        font-weight: var(--typography-fontWeightLight);
+        color: var(--palette-secondary-tex);
+        white-space: nowrap;
+        @include media-breakpoint-up(xl) {
+            font-size: 22px;
+            padding-top: 12.5px;
+            padding-bottom: 12.5px;
+        }
+        @include media-breakpoint-between(lg, xl) {
+            font-size: 20px;
+        }
+        @include media-breakpoint-down(xl) {
+            padding-top: 7.5px;
+            padding-bottom: 7.5px;
+        }
+        @include media-breakpoint-between(md, lg) {
+            font-size: 18px;
+        }
+        @include media-breakpoint-down(md) {
+            font-size: 16px;
+        }
     }
-  }
 }
